[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/BlackHole.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BlackHoleSmear.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BlackHole.png" type="Texture" id=3]
[ext_resource path="res://Sounds/black_hole.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[node name="BlackHole" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="." index="0"]

z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_BlackHole_entered"]

[connection signal="body_exited" from="." to="." method="_on_BlackHole_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


